--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,8 +1,41 @@
 <style type="text/css">  
 body { font-size:18px; font-family:"宋体"} 
-#title{
+#back{
 	background-size:100%;
-	padding-bottom:400px;
- background:url(../images/title.jpg) no-repeat ;
+	padding-top:30px;
+ background:url(../images/background.jpg) no-repeat ;
+}
+#title{
+	font-size:15px; height:120px;
+ width:1000px; 
+ margin-top:1px;
+ margin-left:450px;
+ background:#00ffff;
+}
+#tags { height:23px; width:1000px; margin-top:30px; padding:0; margin-left:20px;}  
+#tags li {color:black;font-size:20px; float:left; margin-left:15px;margin-right:15px;margin-top:58px; background:#c0c0c0no-repeat left bottom; height:23px; list-style-type:none}  
+#tags li a { text-decoration:none; float:left; background:url(。。/images/fresh.png) no-repeat right bottom; height:23px; padding:0px 10px; line-height:23px; color:#999}  
+#tags li.emptyTag { width:4px; background:black}  
+#tags li.selectTag0 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
+#tags li.selectTag1 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
+#tags li.selectTag2 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
+#tags li.selectTag3 {background-position: left top; position:relative; height:25px; margin-bottom:-2px}
+#tags li.selectTag a { background-position: right top; color:#000; height:25px; line-height:25px;}  
+#tagConten { padding:1px; background-color:#dbe3de; margin-top:60px;margin-left:30px;margin-right:30px}  
+.tagContent { background:url(images/bg.gif) repeat-x;  padding:10px; color:#474747; width:576px; display:none}  
+#tagContent div.selectTag{ display:block}      
+#tagContent { font-size:18px; height:760px;
+ width:1000px; 
+ margin-top:1px;
+ margin-left:450px;
+ background:red;
+ }  
+ #word{
+	font-size:18px;
+	height:300px;
+ width:800px; 
+ background:#c0c0c0;
+ margin-top:80px;
+ margin-left:80px;
 }
 </style>
