--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,7 +1,10 @@
 <style type="text/css">  
 body { font-size:18px; font-family:"宋体"}  
 ol li { margin:8px} 
-
+#error{
+	color:red;
+	margin:0 auto
+}
 #back { font-size:20px;
  width:100%; height:100%; 
  margin-left:10px ;
