--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -8,10 +8,10 @@ ol li { margin:8px}
 #back { font-size:20px;
  width:100%; height:100%; 
  margin-left:10px ;
- margin-top:100px;
+ margin-top:10px;
 padding-left:70px;
 padding-top:30px;
-padding-bottom:1000px;
+padding-bottom:1100px;
 background-size:100%;
  background:url(../images/login.jpg) no-repeat ;
  }   
@@ -29,7 +29,11 @@ background-size:100%;
 #tags li.selectTag2 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
 #tags li.selectTag3 {font-size:15px; background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
 #tags li.selectTag a { background-position: right top; color:#000; height:25px; line-height:25px;}  
-#tagContent { padding:1px; background-color:#dbe3de; margin-top:60px;margin-left:30px;margin-right:30px}  
+#tagContent { padding:1px; 
+background:-moz-linear-gradient(top,#dbe3de,#f6f6f8);
+background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#dbe3de), to(#f6f6f8));
+ background: -ms-linear-gradient(top, #dbe3de,  #f6f6f8); 
+margin-top:60px;margin-left:30px;margin-right:30px}  
 .tagContent { background:url(images/bg.gif) repeat-x;  padding:10px; color:#474747; width:576px; display:none}  
 #tagContent div.selectTag{ display:block}  
 </style>
