--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -10,7 +10,9 @@ body { font-size:18px; font-family:"宋体"}
  width:1000px; 
  margin-top:1px;
  margin-left:450px;
- background:#00ffff;
+ background:-moz-linear-gradient(top,#808080,#f6f6f8);
+ background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#808080), to(#f6f6f8));
+ background: -ms-linear-gradient(top, #808080,  #f6f6f8); 
 }
 #tags { height:23px; width:1000px; margin-top:30px; padding:0; margin-left:20px;}  
 #tags li {color:black;font-size:20px; float:left; margin-left:15px;margin-right:15px;margin-top:58px; background:#c0c0c0no-repeat left bottom; height:23px; list-style-type:none}  
@@ -24,18 +26,27 @@ body { font-size:18px; font-family:"宋体"}
 #tagConten { padding:1px; background-color:#dbe3de; margin-top:60px;margin-left:30px;margin-right:30px}  
 .tagContent { background:url(images/bg.gif) repeat-x;  padding:10px; color:#474747; width:576px; display:none}  
 #tagContent div.selectTag{ display:block}      
-#tagContent { font-size:18px; height:760px;
+#tagContent { font-size:18px; height:720px;
  width:1000px; 
  margin-top:1px;
  margin-left:450px;
- background:red;
+background:-moz-linear-gradient(top,#b8c4cb,#f6f6f8);
+background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#b8c4cb), to(#f6f6f8));
+ background: -ms-linear-gradient(top, #b8c4cb,  #f6f6f8); 
  }  
  #word{
 	font-size:18px;
-	height:300px;
- width:800px; 
- background:#c0c0c0;
+	height:600px;
+ width:900px; 
+background:-moz-linear-gradient(top,#b8c4cb,#f6f6f8);/*ie*/
+background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#b8c4cb), to(#f6f6f8));/*火狐*/
+ background: -ms-linear-gradient(top, #b8c4cb,  #f6f6f8);/*谷歌*/
  margin-top:80px;
- margin-left:80px;
+ margin-left:40px;
+}
+#location{
+	width:900px; 
+	 margin-top:1px;
+ margin-left:10px;
 }
 </style>
