--- a/WebContent/css/manage.css
+++ b/WebContent/css/manage.css
@@ -22,16 +22,22 @@ background-size:100%;
  margin-left:600px;
  background:none
  }
-#tags { height:23px; width:400px; margin-top:30px; padding:0; margin-left:20px;}  
+#tags { height:23px; width:500px; margin-top:30px; padding:0; margin-left:20px;}  
 #tags li {font-size:15px; float:left; margin-left:20px;margin-right:20px;margin-top:58px; background:#000040no-repeat left bottom; height:23px; list-style-type:none}  
 #tags li a { text-decoration:none; float:left; background:url(。。/images/fresh.png) no-repeat right bottom; height:23px; padding:0px 10px; line-height:23px; color:#999}  
 #tags li.emptyTag { width:4px; background:black}  
 #tags li.selectTag0 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
 #tags li.selectTag1 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
 #tags li.selectTag2 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
+#tags li.selectTag3 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}
 #tags li.selectTag3 { background-position: left top; position:relative; height:25px; margin-bottom:-2px}  
 #tags li.selectTag a { background-position: right top; color:#000; height:25px; line-height:25px;}  
-#tagContent { padding:1px; background-color:#dbe3de; border:1px solid #aecbd4;margin-top:60px;margin-left:30px;margin-right:30px}  
+#tagContent { padding:1px; 
+background-color:#dbe3de;
+background:-moz-linear-gradient(top,#dbe3de,#f6f6f8);
+background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#dbe3de), to(#f6f6f8));
+ background: -ms-linear-gradient(top, #dbe3de,  #f6f6f8); 
+ border:1px solid #aecbd4;margin-top:60px;margin-left:30px;margin-right:30px}  
 .tagContent { background:url(images/bg.gif) repeat-x;  padding:10px; color:#474747; width:576px; display:none}  
 #tagContent div.selectTag{ display:block}  
 </style>
